--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: artinsight
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    region: oregon
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
-      - key: PYTHON_VERSION
-        value: "3.10"
+      - key: SECRET_KEY
+        value: "super-secret-key"
