--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,8 @@ services:
     env: python
     plan: free
     branch: main
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip setuptools wheel
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
     pythonVersion: 3.11.6
