--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,6 @@ services:
     branch: main
     buildCommand: |
       pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
+      pip install --use-pep517 -r requirements.txt
     startCommand: gunicorn app:app
     pythonVersion: 3.10.13
